# Simple-EVM-Wallet

./: Cargo.toml  README.md  styles.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
